css/main.css
/* Icons
-------------------------------------------------- */
.icon > svg {
  display: inline-block;
  width: 16px;
  height: 16px;
  vertical-align: middle;
}
.icon > svg path {
  fill: #828282;
}

/* Basic Resets
-------------------------------------------------- */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
  margin: 0;
  padding: 0;
}

/* Global Styling
-------------------------------------------------- */
body {
  font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans","Liberation Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
  font-size: 20px;
  line-height: 1.5;
  font-weight: 300;
  color: #111;
  background-color: #fdfdfd;
  -webkit-text-size-adjust: 100%;
}

/* Set `margin-bottom` to maintain vertical rhythm
-------------------------------------------------- */
h1, h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
.highlight {
  margin-bottom: 15px;
}

/* Images
-------------------------------------------------- */
img {
  max-width: 100%;
  vertical-align: middle;
}

/* Figures
-------------------------------------------------- */
figure > img {
  display: block;
}

figcaption {
  font-size: 14px;
}

/* Links
-------------------------------------------------- */
a, a:hover {
  color: #f86c06;
  text-decoration: none;
}

.nav-pills .nav-link.active {
  background-color: #f86c06;
}

/* Blockquotes
-------------------------------------------------- */
blockquote {
  color: #828282;
  border-left: 4px solid #e8e8e8;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic;
}
blockquote > :last-child {
  margin-bottom: 0;
}

/* Code Formatting
-------------------------------------------------- */
pre,
code {
  font-size: 15px;
  border: 1px solid #e8e8e8;
  border-radius: 3px;
  background-color: #eef;
}

code {
  padding: 1px 5px;
}

pre {
  padding: 8px 12px;
  overflow-x: scroll;
}
pre > code {
  border: 0;
  padding-right: 0;
  padding-left: 0;
}

/* Footer Stuff
-------------------------------------------------- */
.footer {
  border-top: 1px solid #e8e8e8;
  padding: 30px 0;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

/* Nav Bar
-------------------------------------------------- */
.form-control-dark {
  color: #fff;
  background-color: var(--bs-dark);
  border-color: var(--bs-gray);
}
.form-control-dark:focus {
  color: #fff;
  background-color: var(--bs-dark);
  border-color: #fff;
  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
}

.bi {
  vertical-align: -.125em;
  fill: currentColor;
}

.text-small {
  font-size: 85%;
}

.dropdown-toggle {
  outline: 0;
}

/* Buttons
-------------------------------------------------- */
.btn-rounded {
  border-radius: 10rem;
}

.btn-purple {
  color: #fff;
  background-color: #b23cfd;
}
.btn-purple:hover {
  color: #fff;
  background-color: #a316fd;
}

.btn-golden {
  color: #fff;
  background-color: #ffa900;
}
.btn-golden:hover {
  color: #fff;
  background-color: #d99000;
}

.btn-dark {
  color: #fff;
  background-color: #262626;
}
.btn-dark:hover {
  background-color: #202020;
  border-color: #1e1e1e;
}

.btn-light-blue {
  color: #fff;
  background-color: #39c0ed;
}
.btn-light-blue:hover {
  color: #fff;
  background-color: #57c9f0;
  border-color: #4dc6ef;
}

.btn-blue {
  color: #fff;
  background-color: #1266f1;
}
.btn-blue:hover {
  background-color: #0f57cd;
  border-color: #0e52c1;
}

/* Jumbotron
-------------------------------------------------- */
.jumbotron-header {
  background-color: #gray;
}

.jumbotron-header-orange {
  background-color: #fef0da;
}

h1.jumbo-title {
  font-size: 30px;
  margin-bottom: 0px;
}
/* Social List
------------------------------------------------- */
ul.social-list {
  list-style-type: none;
}

.social-list {
  font-size: 1.2em;
}

.social-list-item {
  background: none;
  border-radius: 3px;
  border: 0px;
  padding: 5px 10px 5px 10px;
  text-align: center;
}

.social-meta {
  float: right;
  color: gray;
}

.social-footer {
  float: left;
  color: gray;
}

ul.social-list button {
  width: 30%;
  font-size: 20px;
}


/* Post List
-------------------------------------------------- */
ul.post-list {
  list-style-type: none;
}

.post-list {
  font-size: 1.2em;
}

.post-list-item {
  background: none;
  border-radius: 3px;
  border: 0px;
  padding: 5px 10px 5px 10px;
}

.post-list li:hover {
  background: #fef0da;
}

.post-meta {
  float: right;
  color: gray;
}

.post-footer {
  float: left;
  color: gray;
}

/* Syntax Highlighting
-------------------------------------------------- */
.highlight {
  background: #fff;
}
.highlight .c {
  color: #998;
  font-style: italic;
}
.highlight .err {
  color: #a61717;
  background-color: #e3d2d2;
}
.highlight .k {
  font-weight: bold;
}
.highlight .o {
  font-weight: bold;
}
.highlight .cm {
  color: #998;
  font-style: italic;
}
.highlight .cp {
  color: #999;
  font-weight: bold;
}
.highlight .c1 {
  color: #998;
  font-style: italic;
}
.highlight .cs {
  color: #999;
  font-weight: bold;
  font-style: italic;
}
.highlight .gd {
  color: #000;
  background-color: #fdd;
}
.highlight .gd .x {
  color: #000;
  background-color: #faa;
}
.highlight .ge {
  font-style: italic;
}
.highlight .gr {
  color: #a00;
}
.highlight .gh {
  color: #999;
}
.highlight .gi {
  color: #000;
  background-color: #dfd;
}
.highlight .gi .x {
  color: #000;
  background-color: #afa;
}
.highlight .go {
  color: #888;
}
.highlight .gp {
  color: #555;
}
.highlight .gs {
  font-weight: bold;
}
.highlight .gu {
  color: #aaa;
}
.highlight .gt {
  color: #a00;
}
.highlight .kc {
  font-weight: bold;
}
.highlight .kd {
  font-weight: bold;
}
.highlight .kp {
  font-weight: bold;
}
.highlight .kr {
  font-weight: bold;
}
.highlight .kt {
  color: #458;
  font-weight: bold;
}
.highlight .m {
  color: #099;
}
.highlight .s {
  color: #d14;
}
.highlight .na {
  color: #008080;
}
.highlight .nb {
  color: #0086B3;
}
.highlight .nc {
  color: #458;
  font-weight: bold;
}
.highlight .no {
  color: #008080;
}
.highlight .ni {
  color: #800080;
}
.highlight .ne {
  color: #900;
  font-weight: bold;
}
.highlight .nf {
  color: #900;
  font-weight: bold;
}
.highlight .nn {
  color: #555;
}
.highlight .nt {
  color: #000080;
}
.highlight .nv {
  color: #008080;
}
.highlight .ow {
  font-weight: bold;
}
.highlight .w {
  color: #bbb;
}
.highlight .mf {
  color: #099;
}
.highlight .mh {
  color: #099;
}
.highlight .mi {
  color: #099;
}
.highlight .mo {
  color: #099;
}
.highlight .sb {
  color: #d14;
}
.highlight .sc {
  color: #d14;
}
.highlight .sd {
  color: #d14;
}
.highlight .s2 {
  color: #d14;
}
.highlight .se {
  color: #d14;
}
.highlight .sh {
  color: #d14;
}
.highlight .si {
  color: #d14;
}
.highlight .sx {
  color: #d14;
}
.highlight .sr {
  color: #009926;
}
.highlight .s1 {
  color: #d14;
}
.highlight .ss {
  color: #990073;
}
.highlight .bp {
  color: #999;
}
.highlight .vc {
  color: #008080;
}
.highlight .vg {
  color: #008080;
}
.highlight .vi {
  color: #008080;
}
.highlight .il {
  color: #099;
}

